ferritin/src/snapshots/ferritin__tests__get_prefix_tests_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::prefix_tests\"), OutputMode ::\nTestMode, & get_fixture_crate_path ())"
---
<metadata>
  <field name="Item">prefix_tests</field>
  <field name="Kind">Module</field>
  <field name="Visibility">Public</field>
  <field name="Defined at"><type-name>fixture_crate</type-name><punctuation>::</punctuation><type-name>prefix_tests</type-name></field>
  <field name="In crate">fixture-crate (0.1.0)</field>
</metadata>
<truncated level="full"><p>
Edge cases for path-prefix resolution in use-item sources and intra-doc links.</p>
<p>
Rustdoc emits <inline-code>Use::source</inline-code> and intra-doc link targets verbatim from the Rust source: <inline-code>crate::</inline-code>, <inline-code>self::</inline-code>, and <inline-code>super::</inline-code> prefixes are kept as-written. When the corresponding id resolves to an item in the <emphasis>local</emphasis> crate's index (as is the case for all the <inline-code>pub use</inline-code>s below), the iterator never needs to fall back to resolving the source string. The cross-crate counterparts live in <inline-code>tests/test-workspace/crate-b</inline-code> — those actually exercise the fallback path.</p>
<p>
The intra-doc links in this module's docs and its members' docs exercise the same prefix handling on the <inline-code>extract_link_target</inline-code> side (rendered in snapshots).</p>
</truncated>
<section><section-title>Modules</section-title><list>
  <item><p>
<type-name>deep</type-name> </p>
<truncated level="single-line"><p>
A nested module to exercise <inline-code>self::</inline-code>, <inline-code>super::</inline-code>, and <inline-code>super::super::</inline-code>.</p>
</truncated>
</item>
</list>
</section><section><section-title>Structs</section-title><list>
  <item><p>
<type-name>DocOuter</type-name> </p>
<truncated level="single-line"><p>
Intra-doc links from the outer module:</p>
 <elided chars="172"/></truncated>
</item>
  <item><p>
<type-name>PrefixMarker</type-name> </p>
<truncated level="single-line"><p>
A sibling target for <inline-code>self::</inline-code> / <inline-code>super::PrefixMarker</inline-code> references.</p>
</truncated>
</item>
</list>
</section>
